--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,10 +74,10 @@ jobs:
 
     - name: Deploy frontend to EKS
       run: |
-        sed -i "s|image: .*|image: $ECR_FRONTEND_REPO:$SHORT_SHA|" client/k8s/frontend-deployment.yaml
+        sed -i "s|.*image: .*|          image: $ECR_FRONTEND_REPO:$SHORT_SHA|" client/k8s/frontend-deployment.yaml
         kubectl apply -f client/k8s/frontend-deployment.yaml
 
     - name: Deploy backend to EKS
       run: |
-        sed -i "s|image: .*|image: $ECR_BACKEND_REPO:$SHORT_SHA|" server/k8s/backend-deployment.yaml
+        sed -i "s|.*image: .*|          image: $ECR_BACKEND_REPO:$SHORT_SHA|" server/k8s/backend-deployment.yaml
         kubectl apply -f server/k8s/backend-deployment.yaml
