--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,8 +72,9 @@ jobs:
         aws eks update-kubeconfig --region $AWS_REGION --name $EKS_CLUSTER_NAME
 
     - name: Debug Print updated frontend manifest
-      run: cat client/k8s/frontend-deployment.yaml
-      run: echo "Replacing with image ${ECR_FRONTEND_REPO}:${SHORT_SHA}"
+      run: |
+        cat client/k8s/frontend-deployment.yaml
+        echo "Replacing with image ${ECR_FRONTEND_REPO}:${SHORT_SHA}"
     - name: Deploy frontend to EKS
       run: |
         sed -i "s#image: .*#image: ${ECR_FRONTEND_REPO}:${SHORT_SHA}#g" client/k8s/frontend-deployment.yaml
