--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,22 +71,10 @@ jobs:
       run: |
         aws eks update-kubeconfig --region $AWS_REGION --name $EKS_CLUSTER_NAME
 
-    - name: Debug Print updated frontend manifest
-      run: |
-        cat client/k8s/frontend-deployment.yaml
-        echo "Before:"
-        grep 'image:' client/k8s/frontend-deployment.yaml
-
     - name: Deploy frontend to EKS
       run: |
-        sed -i "s|image: \*\*\*|image: ${ECR_FRONTEND_REPO}:${SHORT_SHA}|g" client/k8s/frontend-deployment.yaml
+        sed -i "s|^\s*image: .*|image: ${ECR_FRONTEND_REPO}:${SHORT_SHA}|g" client/k8s/frontend-deployment.yaml
         kubectl apply -f client/k8s/frontend-deployment.yaml
-
-    - name: Debug Print updated frontend manifest after sed
-      run: |
-        echo "After:"
-        grep 'image:' client/k8s/frontend-deployment.yaml
-
 
     - name: Deploy backend to EKS
       run: |
