--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,7 +73,12 @@ jobs:
 
     - name: Deploy frontend to EKS
       run: |
-        sed -i "s|^\s*image: .*|image: ${ECR_FRONTEND_REPO}:${SHORT_SHA}|g" client/k8s/frontend-deployment.yaml
+        echo "Replacing with image: ${ECR_FRONTEND_REPO}:${SHORT_SHA}"
+        grep 'image:' client/k8s/frontend-deployment.yaml
+
+        sed -i "s|^[[:space:]]*image: .*|image: ${ECR_FRONTEND_REPO}:${SHORT_SHA}|g" client/k8s/frontend-deployment.yaml
+
+        grep 'image:' client/k8s/frontend-deployment.yaml
         kubectl apply -f client/k8s/frontend-deployment.yaml
 
     - name: Deploy backend to EKS
