--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,7 +76,7 @@ jobs:
         echo "Replacing with image: ${ECR_FRONTEND_REPO}:${SHORT_SHA}"
         grep 'image:' client/k8s/frontend-deployment.yaml
 
-        sed -i "s|^[[:space:]]*image: .*|image: ${ECR_FRONTEND_REPO}:${SHORT_SHA}|g" client/k8s/frontend-deployment.yaml
+        sed -i "s|image: .*|image: ${ECR_FRONTEND_REPO}:${SHORT_SHA}|g" client/k8s/frontend-deployment.yaml
 
         grep 'image:' client/k8s/frontend-deployment.yaml
         kubectl apply -f client/k8s/frontend-deployment.yaml
