--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,17 +77,18 @@ jobs:
 
     - name: Deploy frontend to EKS
       run: |
-        echo "Replacing with image: ${ECR_FRONTEND_REPO}:${SHORT_SHA}"
+          echo "Replacing with image: ${ECR_FRONTEND_REPO}:${SHORT_SHA}"
 
-        echo "Before:"
-        grep -E '^\s*image:' client/k8s/frontend-deployment.yaml || echo "No image line found"
+          echo "Before:"
+          grep 'image:' client/k8s/frontend-deployment.yaml || echo "No image line found"
 
-        sed -i.bak -E "s|^\s*image:.*|image: ${ECR_FRONTEND_REPO}:${SHORT_SHA}|g" client/k8s/frontend-deployment.yaml
+          sed -i.bak "s|image: \*\*\*:test|image: ${ECR_FRONTEND_REPO}:${SHORT_SHA}|g" client/k8s/frontend-deployment.yaml
 
-        echo "After:"
-        grep -E '^\s*image:' client/k8s/frontend-deployment.yaml || echo "No image line found"
+          echo "After:"
+          grep 'image:' client/k8s/frontend-deployment.yaml || echo "No image line found"
 
-        kubectl apply -f client/k8s/frontend-deployment.yaml
+          kubectl apply -f client/k8s/frontend-deployment.yaml
+
 
     - name: Deploy backend to EKS
       run: |
